--- a/ClimbingConnect-manifest.json
+++ b/ClimbingConnect-manifest.json
@@ -1,5 +1,6 @@
 {
     "url": "https://github.com/chillcn/ClimbingClubConnect",
     "name": "ClimbingClub",
+    "description": "ClimbingClub",
     "iconUrl": "https://raw.githubusercontent.com/chillcn/ClimbingClubConnect/main/ClimbingConnect.png"
   }
