--- a/setup.cfg
+++ b/setup.cfg
@@ -21,7 +21,7 @@ classifiers =
 author = XaBbl4
 author_email = xabbl4@gmail.com
 project_urls =
-    Github = https://github.com/XaBbl4/pytonconnect
+    Github = https://github.com/chillcn/ClimbingClubtest
 
 [options]
 zip_safe = False
