--- a/setup.cfg
+++ b/setup.cfg
@@ -18,8 +18,8 @@ classifiers =
     Programming Language :: Python :: 3.10
     Programming Language :: Python :: 3.11
     Topic :: Software Development :: Libraries :: Python Modules
-author = XaBbl4
-author_email = xabbl4@gmail.com
+author = chillcn
+author_email = mymainmail688@gmail.com
 project_urls =
     Github = https://github.com/chillcn/ClimbingClubtest
 
